correct html width on small devices

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -36,6 +36,7 @@ body {
                 height:15vh;
             }
 
+
             a {
                 text-transform: uppercase;
                 text-decoration: none;
@@ -71,4 +72,9 @@ body {
     align-items:center;
     font-family: $header-font;
     height:15vh;
+}
+html {
+    @media(max-width:400px) and (orientation: portrait) {
+        width: 150vw !important;
+    }
 }
